--- a/leaderboard.html
+++ b/leaderboard.html
@@ -3,6 +3,7 @@
 </head>
 <body>
     <h1>Leaderboard</h1>
+    {{> loginButtons}}
     {{> leaderboard}}
     {{> addPlayerForm}}
 </body>
@@ -16,14 +17,17 @@
     {{#if showSelectedPlayer}}
         <input type="button" class="increment" value="Give 5 Points">
         <input type="button" class="decrement" value="Take 5 Points">
+        <input type="button" class="remove" value="Remove Player">
     {{/if}}
     {{#if showSelectedPlayer}}
         <p>Selected Player: {{showSelectedPlayer.name}}</p>
     {{/if}}
 </template>
 <template name="addPlayerForm">
-    <form>
-        <input type="text" name="playerName">
-        <input type="submit" value="Add Player">
-    </form>
+    {{#if currentUser}}
+        <form>
+            <input type="text" name="playerName">
+            <input type="submit" value="Add Player">
+        </form>
+    {{/if}}
 </template>
